Fixed bugs (slider's and text's size, horizontal scroll)

--- a/source/sass/page/page-main/about-food/about-food.scss
+++ b/source/sass/page/page-main/about-food/about-food.scss
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: $width-desktop;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px 0 0;
   align-items: center;
   box-sizing: border-box;
 }
@@ -29,7 +29,7 @@
   @media (max-width: $width-mobile) {
     padding: 0 20px 40px;
     font-size: 26px;
-    line-height: 26px;
+    line-height: 34px;
   }
 }
 
