--- a/source/sass/page/page-main/about-food/slider.scss
+++ b/source/sass/page/page-main/about-food/slider.scss
@@ -1,6 +1,6 @@
 .slider {
   width: 100%;
-  height: 501px;
+  height: 37.2vw;
 
   @media (max-width: 500px) {
     height: 100vw;
