--- a/source/sass/page/page-main/about-us/about-us.scss
+++ b/source/sass/page/page-main/about-us/about-us.scss
@@ -11,6 +11,7 @@
   align-items: flex-start;
   max-width: $width-desktop;
   margin: 0 auto;
+  padding-top: 100px;
   box-sizing: border-box;
 }
 
