--- a/source/sass/page/page-main/menu/menu.scss
+++ b/source/sass/page/page-main/menu/menu.scss
@@ -248,21 +248,15 @@
   }
 }
 
-.menu__description-text {
-  width: 43%;
+.menu__text-container {
   margin: 0;
+  padding: 0;
+  width: 43%;
   padding: 20px 30px 20px 35px;
   box-sizing: border-box;
 
-  @media (max-width: $width-tablet) {
-    font-size: 16px;
-    line-height: 16px;
-  }
-
   @media (max-width: $width-mobile) {
     width: 100%;
-    font-size: 14px;
-    line-height: 14px;
   }
 
   @media (max-width: 500px) {
@@ -270,7 +264,7 @@
   }
 }
 
-.menu__text-2 {
+.menu__text-container-2 {
   margin: 0;
   padding-left: 100px;
   padding-right: 35px;
@@ -286,4 +280,27 @@
   @media (max-width: 500px) {
     padding-bottom: 0;
   }
+}
+
+.menu__description-text {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 23px;
+
+
+  @media (max-width: $width-tablet) {
+    font-size: 16px;
+    line-height: 16px;
+    padding-bottom: 16px;
+  }
+
+  @media (max-width: $width-mobile) {
+    font-size: 14px;
+    line-height: 14px;
+    padding-bottom: 16px;
+  }
+}
+
+.menu__description-text:last-child {
+  padding-bottom: 0;
 }
